@@ -1,4 +1,8 @@
-TARGETCC = $(TOOLSPREFIX)gcc
-TARGETCXX = $(TOOLSPREFIX)g++
+ifeq ($(TARGETCC),)
+  TARGETCC = $(TOOLSPREFIX)gcc
+endif
+ifeq ($(TARGETCXX),)
+  TARGETCXX = $(TOOLSPREFIX)g++
+endif
 TARGETRANLIB = $(TOOLSPREFIX)ranlib
 TARGETSTRIP = $(TOOLSPREFIX)strip
